--- a/Wordageddon_G13/src/main/resources/view/ScoreView.fxml
+++ b/Wordageddon_G13/src/main/resources/view/ScoreView.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -9,24 +13,25 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #1a1a2e, #16213e, #0f3460), radial-gradient(radius 100%, transparent, #00000066);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ScoreController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #1a1a2e, #16213e, #0f3460), radial-gradient(radius 100%, transparent, #00000066);" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ScoreController">
    <children>
       <Pane prefHeight="701.0" prefWidth="1299.0">
          <children>
             <TableView fx:id="scoreTableView" layoutX="194.0" layoutY="210.0" prefHeight="468.0" prefWidth="922.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #1a1a2e, #16213e, #0f3460), radial-gradient(radius 100%, transparent, #00000066);" />
             <Label fx:id="avgScoreLabel" layoutX="535.0" layoutY="152.0" prefHeight="17.0" prefWidth="234.0" text="Label" textAlignment="CENTER" textFill="WHITE" />
-            <Label fx:id="titleLabel" layoutX="385.0" layoutY="73.0" prefHeight="70.0" prefWidth="731.0" text="Label" textAlignment="CENTER" textFill="#f70a0a">
+            <Label fx:id="titleLabel" layoutX="500.0" layoutY="75.0" prefHeight="70.0" prefWidth="368.0" text="Label" textAlignment="CENTER" textFill="#f70a0a">
                <font>
                   <Font name="Microsoft YaHei Bold" size="48.0" />
                </font></Label>
-            <Button fx:id="leaderBoardButton" layoutX="898.0" layoutY="716.0" mnemonicParsing="false" onAction="#loadLeaderBoard" prefHeight="33.0" prefWidth="142.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15; -fx-background-radius: 8;" text="Reload Scores" />
+            <Button fx:id="leaderBoardButton" layoutX="900.0" layoutY="716.0" mnemonicParsing="false" onAction="#loadLeaderBoard" prefHeight="33.0" prefWidth="142.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15; -fx-background-radius: 8;" text="Reload Scores" />
             <HBox alignment="CENTER" layoutX="210.0" layoutY="678.0" prefHeight="100.0" prefWidth="490.0" spacing="100.0">
                <children>
-                  <RadioButton fx:id="hardButton" mnemonicParsing="false" style="-fx-font-weight: bold; -fx-font-size: 15;" text="Hard" textFill="WHITE" />
                   <RadioButton fx:id="easyButton" mnemonicParsing="false" style="-fx-font-size: 15; -fx-font-weight: bold;" text="Easy" textFill="WHITE" />
                   <RadioButton fx:id="mediumButton" mnemonicParsing="false" style="-fx-text-fill: white; -fx-font-size: 15; -fx-font-weight: bold;" text="Medium" textFill="WHITE" />
+                  <RadioButton fx:id="hardButton" mnemonicParsing="false" style="-fx-font-weight: bold; -fx-font-size: 15;" text="Hard" textFill="WHITE" />
                </children>
             </HBox>
+            <Button fx:id="yourScoreButton" layoutX="900.0" layoutY="716.0" mnemonicParsing="false" onAction="#loadYourScore" prefHeight="33.0" prefWidth="142.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 15; -fx-background-radius: 8;" text="Reload Scores" />
          </children>
       </Pane>
    </children>
